# escritorio-1-pessoa

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .semgrepignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/app/: config.py  main.py  seed.py  seed_staging.py  worker.py
apps/api/app/core/: ai.py  audit.py  (+15 more)
apps/api/migrations/: env.py
apps/api/scripts/: export_openapi.py
apps/api/tests/: conftest.py  test_agenda.py  test_ai.py  test_anonymizer.py  test_attachments.py  test_attachments_s3.py  test_auth.py  test_boleto.py  test_chart_of_accounts.py  test_chart_of_accounts_rls.py  test_client360.py  test_cockpit.py  test_config.py  test_contracts.py  test_cost_centers.py  test_cost_centers_rls.py  test_crm.py  test_email.py  test_extract.py  test_financial_intelligence_diagnostics_rls.py  test_financial_intelligence_dre.py  test_financial_intelligence_dre_matrix.py  test_financial_intelligence_dre_rls.py  test_financial_intelligence_engine.py  test_financial_intelligence_narrator.py  test_financial_intelligence_profitability.py  test_financial_intelligence_profitability_rls.py  test_financial_intelligence_projection.py  test_financial_intelligence_projection_rls.py  test_funnel_automation.py  test_funnels.py  test_google_calendar.py  test_google_calendar_hardening.py  test_health.py  test_idle_timeout.py  test_integrations.py  test_investments.py  test_investments_rls.py  test_juridico.py  test_lead_auto_enroll.py  (+33 more)
(+422 files in other folders)
